Refactor (#1)
* routing changes, as well as how segments are handled, and codecs.

* add some unstaged files