@@ -1,6 +1,5 @@
 package us.racem.sea.net;
 
-import okio.Okio;
 import rawhttp.core.RawHttp;
 import rawhttp.core.RawHttpResponse;
 import rawhttp.core.body.BytesBody;
@@ -8,13 +7,13 @@ import us.racem.sea.body.Response;
 import us.racem.sea.fish.Ocean;
 import us.racem.sea.fish.OceanExecutable;
 import us.racem.sea.mark.methods.RequestMethod;
-import us.racem.sea.route.Router;
+import us.racem.sea.route.RouteRegistry;
 import us.racem.sea.util.InterpolationLogger;
 
 import java.io.IOException;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.util.concurrent.ExecutorService;
@@ -23,23 +22,26 @@ import java.util.concurrent.Executors;
 import static java.time.format.DateTimeFormatter.RFC_1123_DATE_TIME;
 
 public class SeaServer extends OceanExecutable {
-    private static final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+    private static final ExecutorService executor = Executors.newFixedThreadPool(2);
     private static final InterpolationLogger logger = InterpolationLogger.getLogger(Ocean.class);
     private static final String logPrefix = "SRV";
     private static final String headerSeperator = "\r\n";
 
     private int port;
 
-    private int max_header_size = 16384;
-    private int max_body_size = 1048576;
+    private int max_header_size;
+    private int max_body_size;
 
     private RawHttp parser;
 
     private ServerSocket srv;
 
-    public SeaServer(int port) {
+    public SeaServer(int port, int max_body_size, int max_header_size) {
         try {
             this.port = port;
+            this.max_body_size = max_body_size;
+            this.max_header_size = max_header_size;
+
             this.srv = new ServerSocket(port);
             this.parser = new RawHttp();
         } catch (IOException err) {
@@ -91,13 +93,13 @@ public class SeaServer extends OceanExecutable {
                 body = req.getBody().get().decodeBody();
             }
 
-            var res = Router.request(method, path, headers, body);
+            var res = RouteRegistry.requestOf(path, method, headers, body);
             var rsp = encodeResponse(res);
             rsp.writeTo(os);
 
             cs.close();
-        } catch (IOException err) {
-            logger.warn("%rUnable to Read: {}%", err);
+        } catch (Exception err) {
+            logger.warn("%rUnable to Serve: {}%", err);
         }
     }
 
@@ -106,7 +108,7 @@ public class SeaServer extends OceanExecutable {
         if (rsp.body != null) {
             return parser
                     .parseResponse(headers)
-                    .withBody(new BytesBody((byte[]) rsp.body));
+                    .withBody(new BytesBody(rsp.body));
         }
 
         return parser.parseResponse(headers);
@@ -118,7 +120,7 @@ public class SeaServer extends OceanExecutable {
         var body = (byte[]) rsp.body;
 
         sb.append("HTTP/1.1 ")
-          .append(rsp.status.encode())
+          .append(rsp.op)
           .append(headerSeperator);
 
         sb.append("Content-Type: ")
